--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ Flask-SQLAlchemy==3.1.1
 Flask-Migrate==4.0.7
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
+passlib==1.7.4
+flask-marshmallow==1.2.1
+marshmallow==3.23.2
+argon2-cffi==23.1.0
